tz-local/resource/istio/jaeger_kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui
  namespace: istio-system
  uid: a9b95c49-9920-4f1d-b465-02b2bad9dd2c
  resourceVersion: '207676866'
  generation: 2
  creationTimestamp: '2024-01-16T03:20:06Z'
  labels:
    k8slens-edit-resource-version: v1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-istio
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-istio","kubernetes.io/ingress.class":"istio","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"jaeger-ui","namespace":"istio-system"},"spec":{"rules":[{"host":"jaeger.istio-system.eks-main-s.argear.io","http":{"paths":[{"backend":{"service":{"name":"tracing","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["jaeger.istio-system.eks [...]
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/rewrite-target: /
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-0e40e9ba23d151660
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-01-16T03:20:06Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/cluster-issuer: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:kubernetes.io/ingress.class: {}
            f:nginx.ingress.kubernetes.io/rewrite-target: {}
    - manager: pilot-discovery
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-01-16T03:20:06Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      subresource: status
    - manager: node-fetch
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-02-02T04:34:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:service.beta.kubernetes.io/aws-load-balancer-security-groups: {}
          f:labels:
            .: {}
            f:k8slens-edit-resource-version: {}
        f:spec:
          f:rules: {}
          f:tls: {}
  selfLink: /apis/networking.k8s.io/v1/namespaces/istio-system/ingresses/jaeger-ui
status:
  loadBalancer:
    ingress:
      - hostname: >-
          a42f6820b5321472dbd15a2864800566-502021461.ap-northeast-2.elb.amazonaws.com
spec:
  tls:
    - hosts:
        - jaeger.istio-system.eks-main-s.argear.io
      secretName: jaeger-tls
  rules:
    - host: jaeger.istio-system.eks-main-s.argear.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracing
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  uid: 3bf36644-c8a3-4ac3-87d2-1cc9f6b34ba0
  resourceVersion: '195851888'
  generation: 2
  creationTimestamp: '2024-01-16T03:20:05Z'
  labels:
    k8slens-edit-resource-version: v1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-istio
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-istio","kubernetes.io/ingress.class":"istio","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"kiali","namespace":"istio-system"},"spec":{"rules":[{"host":"kiali.istio-system.eks-main-s.argear.io","http":{"paths":[{"backend":{"service":{"name":"kiali","port":{"number":20001}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["kiali.istio-system.eks-main [...]
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/rewrite-target: /
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-01-16T03:20:05Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/cluster-issuer: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:kubernetes.io/ingress.class: {}
            f:nginx.ingress.kubernetes.io/rewrite-target: {}
    - manager: pilot-discovery
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-01-16T03:20:06Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      subresource: status
    - manager: node-fetch
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-01-18T17:27:41Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:k8slens-edit-resource-version: {}
        f:spec:
          f:rules: {}
          f:tls: {}
  selfLink: /apis/networking.k8s.io/v1/namespaces/istio-system/ingresses/kiali
status:
  loadBalancer:
    ingress:
      - hostname: >-
          a42f6820b5321472dbd15a2864800566-502021461.ap-northeast-2.elb.amazonaws.com
spec:
  tls:
    - hosts:
        - kiali.istio-system.eks-main-s.argear.io
      secretName: kiali-tls
  rules:
    - host: kiali.istio-system.eks-main-s.argear.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
